# CrewAI-AutoContent

./: README.md  Result.md  airtable.py  airtable2.py  content_output.md  pyproject.toml  refined_output.md
src/generate_topics/: crew.py  main-flow.py  main.py  main4.py
src/generate_topics/config/: agents.yaml  agents2.yaml  tasks.yaml  tasks2.yaml
src/generate_topics/tools/: custom_tool.py
